Logica del registro

--- a/css/style.css
+++ b/css/style.css
@@ -10290,3 +10290,7 @@ textarea {
       .site-footer .social li a:hover {
         background: #fff;
         color: #306EE8; }
+
+        .logo-whatmoney{
+          height: 45px;
+        }
