--- a/css/movimientos.css
+++ b/css/movimientos.css
@@ -8,7 +8,6 @@
 .camposSelect input {
     border: none;
     border-radius: 5px;
-
 }
 
 .camposSelect input:focus {
@@ -17,17 +16,16 @@
 
 /* Estilos para el contenedor con scroll */
 .scroll-container {
-    max-height: 500px; /* Puedes ajustar esto según tus necesidades */
+    max-height: 400px; /* Puedes ajustar esto según tus necesidades */
     overflow-y: auto;
-    border: 1px solid #ccc;
     padding: 10px;
 }
 
 
 /* Estilos generales para la tabla */
 .data-table {
-    width: 100%;
-    border-collapse: collapse;
+    width: 90%;
+    border-radius: 10px;
     margin-top: 20px;
 }
 
@@ -37,6 +35,7 @@
     color: #fff; /* Color del texto del encabezado */
     padding: 10px;
     text-align: left;
+    
 }
 
 /* Estilos alternados para filas de datos */
